--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,17 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+        integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
     <link rel="stylesheet" href="/assets/css/burger_style.css">
     <title>Burger-App</title>
 </head>
 
 <body>
-    <header><h1><i class="fas fa-hamburger"></i>  Burger Eating App!  <i class="fas fa-hamburger"></i></h1></header>
+    <header>
+        <h1><i class="fas fa-hamburger"></i> Burger Eating App! <i class="fas fa-hamburger"></i></h1>
+    </header>
     {{{ body }}}
 
+    
+    {{!-- jQuery --}}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     {{!-- Materialize JavaScript CDN --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
