--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
                         <p>{{this.burger_name}}</p>
                     </div>
                     <div class="col s2">
-                        <button class="waves-effect waves-light btn-small red darken-1" id="devour"
+                        <button class="waves-effect waves-light btn-small red darken-1 devour" 
                             data-id="{{this.id}}">Devour!</button>
                     </div>
                 </div>
@@ -33,8 +33,8 @@
                         <p>{{this.burger_name}}</p>
                     </div>
                     <div class="col s2">
-                        <button class="waves-effect waves-light btn-small red darken-1" id="devour"
-                            data-id="{{this.id}}"><i class="far fa-trash-alt"></i></button>
+                        <button class="waves-effect waves-light btn-small red darken-1 delete"
+                            data-id="{{this.id}}">DELETE!</i></button>
                     </div>
                 </div>
                 {{/if}}
