--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col s6">
             <div class="uneaten">
-                <h2>Uneaten Burgers</h2>
+                <h2>Uneaten Burgers</h2>                
                 {{#each burger}}
                 {{#unless this.devoured}}
                 <div class="row">
@@ -25,7 +25,7 @@
 
         <div class="col s6">
             <div class="eaten">
-                <h2>Devoured Burgers</h2>
+                <h2>Eaten Burgers</h2>
                 {{#each burger}}
                 {{#if this.devoured}}
                 <div class="row">
@@ -49,11 +49,11 @@
             <div class="row">
                 <div class="input-field col s11">
                     <textarea id="textarea1" class="materialize-textarea user-input"></textarea>
-                    <label for="textarea1">Enter your burger name</label>
+                    <label class="red-text text-darken-1" for="textarea1">Enter your burger name</label>
                 </div>
             </div>
             <div class="row submit-btn">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+                <button class="btn waves-effect waves-light red darken-1" type="submit" name="action">Submit</button>
             </div>
         </form>
     </div>
