--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,6 +23,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     {{!-- Materialize JavaScript CDN --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    {{!-- JavaScript file --}}
     <script src="/assets/js/script.js"></script>
 </body>
 
