--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -71,3 +71,17 @@ form {
 label {
     font-size: 20px !important;
 }
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.7rem;
+  }
+
+  header {
+    height: 200px;
+  }
+  
+  h2 {
+    font-size: 2.5rem !important;
+  }
+}
