--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,13 +2,13 @@
 
 <div class="burger-lists">
     <div class="row">
-        <div class="col s6">
+        <div class="col s12 m6">
             <div class="uneaten">
                 <h2>Uneaten Burgers</h2>                
                 {{#each burger}}
                 {{#unless this.devoured}}
                 <div class="row">
-                    <div class="col s4 offset-s3">
+                    <div class="col s5 m4 offset-s2 offset-m3">
                         <p>{{this.burger_name}}</p>
                     </div>
                     <div class="col s2">
@@ -23,13 +23,13 @@
 
     {{!-- Eaten burgers section --}}
 
-        <div class="col s6">
+        <div class="col s12 m6">
             <div class="eaten">
                 <h2>Eaten Burgers</h2>
                 {{#each burger}}
                 {{#if this.devoured}}
                 <div class="row">
-                    <div class="col s4 offset-s3">
+                    <div class="col s5 m4 offset-s2 offset-m3">
                         <p>{{this.burger_name}}</p>
                     </div>
                     <div class="col s2">
@@ -45,9 +45,9 @@
 
     {{!-- New burger form --}}
     <div class="row">
-        <form class="col s6 offset-s3 burger-form">
+        <form class="col s12 m6 offset-m3 burger-form">
             <div class="row">
-                <div class="input-field col s11">
+                <div class="input-field col s12 m11">
                     <textarea id="textarea1" class="materialize-textarea user-input"></textarea>
                     <label class="red-text text-darken-1" for="textarea1">Enter your burger name</label>
                 </div>
